# video_transcription

./: .env  main.ipynb  pyproject.toml  resumo.md
