[tool.poetry]
name = "video-capture"
version = "0.1.0"
description = ""
authors = ["Ruan Oliveira <127878189+RuanHOliveira@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
langchain-community = "^0.3.8"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.10"
langchain-huggingface = "^0.1.2"
youtube-transcript-api = "^0.6.3"
pytube = "^15.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
